# lexist

./: .gitignore  Cargo.toml  build.rs  readme.md
resources/: input.txt  sudachi.json
resources/epub/: epub3-spec.epub
src/: anki.rs  common.rs  dict.rs  error.rs  extractor.rs  lib.rs  main.rs  parser.rs  processor.rs  source.rs  tokenizer.rs
src/dict/: mdict.rs
src/processor/: cleaner.rs  epub.rs
src/source/: epub.rs
