[package]
name = "lexist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
serde_json = "1.0.132"
epub = "2.1.2"
quick-xml = "0.37.0"
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs.git" }
mdict = "0.1.8"
genanki-rs = "0.4"
thiserror = "2.0.0"

[build]
build = "build.rs"